--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "@metamask/multichain-provider": "^0.22.3",
     "@metamask/providers": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
