using old idriss version without devDep ethers

--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -58,6 +58,6 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "idriss-crypto": "^1.8.1"
+    "idriss-crypto": "1.4.0"
   }
 }
